--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: My Project Name
 description: Documentation for My Project
-theme: just-the-docs
+remote_theme: just-the-docs/just-the-docs
 url: https://<your-github-username>.github.io/<your-repo-name>
 
 # Enable search (default: true)
